--- a/Bowdoin Tour Guide/MainStoryboard_iPhone.storyboard
+++ b/Bowdoin Tour Guide/MainStoryboard_iPhone.storyboard
@@ -29,10 +29,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem image="Follow.png" id="r0F-3X-P9L"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" title="Bowdoin College" id="U3v-NW-OsS"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" barStyle="blackTranslucent"/>
                     <connections>
                         <outlet property="activityIndicator" destination="h4h-ea-d9b" id="DmT-Dm-bZz"/>
                         <outlet property="mapView" destination="HUE-D4-1EZ" id="aEC-jZ-s1M"/>
+                        <outlet property="userTrackingButton" destination="r0F-3X-P9L" id="UV0-Yq-pcV"/>
                     </connections>
                 </viewController>
             </objects>
@@ -41,10 +46,14 @@
         <scene sceneID="xPr-3j-Kz7">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="coo-pp-0Qi" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController definesPresentationContext="YES" id="aND-j4-lD0" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="7F6-K9-wMB">
+                <navigationController definesPresentationContext="YES" toolbarHidden="NO" id="aND-j4-lD0" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" barStyle="blackOpaque" id="7F6-K9-wMB">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" barStyle="blackTranslucent" id="kAL-zR-2Bq">
+                        <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="P37-y0-7oA" kind="relationship" relationship="rootViewController" id="Lf3-va-Rf0"/>
                     </connections>
@@ -53,12 +62,16 @@
             <point key="canvasLocation" x="-10" y="86"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Follow.png" width="20" height="20"/>
+    </resources>
     <classes>
         <class className="MapViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="activityIndicator" candidateClass="UIActivityIndicatorView"/>
                 <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="userTrackingButton" candidateClass="UIBarButtonItem"/>
             </relationships>
         </class>
     </classes>
